# liquidcalc

./: .tasks  Dockerfile  README.md  app.py  docker-entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
liquidcalc/: __init__.py  app.py  calc.py  parser.py  table.py
tests/: test_app.py  test_app_dev.py  test_calc.py  test_liquidcalc.py  test_parser.py  test_table.py
