[tool.poetry]
name = "liquidcalc"
version = "0.1.0"
description = "Calculate simple vaping liquid recepies"
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/MichaelSasser/liquidcalc"
keywords = ['vaping', 'liquid']
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
# Look here for all Classifiers:
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^5"
pytest-cov = "^2.10.0"
flake8 = { git = "https://gitlab.com/pycqa/flake8", branch = "master" }
neovim = "^0.3.1"
pydocstyle = "^5.0"
pylint = "^2.4"
pycodestyle = "^2.6"
yapf = "^0.30.0"
vulture = "^1.4"
mypy = "^0.770"
python-language-server = {version = "^0.33", extras = ["all"]}
black = "^19.10b0"
isort = {version = "^4.3.21", extras = ["pyproject"]}
flake8-bugbear = "^20.1.4"

[tool.poetry.scripts]
liquidcalc = "liquidcalc.app:main"

[tool.black]
line-length = 79
include = '\.pyi?$'
# exclude __init__.py because of ordered importing
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[tool.isort]
line_length = 79
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py", "*.rst", "*.md", "*.yaml", "*.txt", "*.yml", "*.lock", "*.toml", "*.ini", "Makefile"]
filter_files = true
known_first_party = "liquidcalc"
known_third_party = [
    "pytest",
]

[tool.flake8]
max-line-length = 79
# max-complexity = 12
ignore = "E501"
select = "C,E,F,W,B,B901"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
